update pic and font size

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="main">
             <h1>Today is Carmen's birthday 🥳🥳</h1>
-            <img id="img01" src="images/bdaypic3.jpg" alt="A beautiful picture">
+            <img id="img01" src="images/bday6.jpg" alt="A beautiful picture">
             <h2 class="bday-age">22 years old</h2>
             <h4 class="bday-date">22/07/2025</h4>
         </div>
@@ -56,7 +56,7 @@
             setTimeout(() => {
                 graffitiScreen.style.display = "none";
                 mainContent.style.display = "block";
-            }, 30000);
+            }, 10000);
         });
     </script>
 </body>
